--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.3.0 2025-11-07
+  - Added petprep outputs and removed previous derivatives
 1.2.0 2025-10-30
   - InjectedRadioactivityUnits kBq -> Bq for all subjects; Blood data for subject 01: corrected values now provided, and sessions are now unique.
 1.1.2
